# talon-rs

./: .gitignore  Cargo.toml  README.md  build.rs  todo.txt
paopu_sandbox/: Cargo.toml
paopu_sandbox/src/: main.rs
src/: lib.rs  prelude.rs
src/paopu_core/: application.rs  application_events.rs  event_system.rs  events.rs  paopu_core.rs
src/paopu_input/: input.rs
src/paopu_renderer/: camera.rs  paopu_renderer.rs  renderer.rs  shader.vert  state_descriptor.rs  uniforms.rs
src/paopu_window/: window.rs
src/talon_core/: application.rs  application_event.rs  application_events.rs  module.rs
src/talon_renderer/: renderer.rs  shader.frag  shader.vert  shader.vert.spv  state_descriptor.rs  talon_renderer.rs  texture.rs  uniforms.rs  vertex_buffer_descriptor.rs
src/talon_window/: window.rs
talon_sandbox/: Cargo.toml
talon_sandbox/src/: main.rs
