[package]
name = "paopu-rs"
version = "0.1.0"
authors = ["Devon McKenzie <novithian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winit = "0.22"
wgpu = "0.7"
image = "0.23"
cgmath = "0.17"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"

[dependencies.glfw]
git = "https://github.com/PistonDevelopers/glfw-rs.git"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7.1"
